ingrees/p-rule-ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: p-ingress
  namespace: production
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:

## Service Location n Characters
  - host: blog.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: p-wordpress-deployment
          servicePort: 80

  - host: pesbuk.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: p-pesbuk-deployment
          servicePort: 80

  - host: rudi.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: p-lp-deployment
          servicePort: 80
