ingrees/s-rule-ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s-ingress
  namespace: staging
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:

## Service Location n Characters
  - host: s-blog.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: s-wordpress-deployment
          servicePort: 80

  - host: s-pesbuk.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: s-pesbuk-deployment
          servicePort: 80

  - host: s-rudi.borjong.monster
    http:
      paths:
      - path: /
        backend:
          serviceName: s-lp-deployment
          servicePort: 80
